[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/furniture/obiekty/piekarnik1.png" type="Texture" id=1]
[ext_resource path="res://World/furniture/Slot/Slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/furniture/Przelewanie.gd" type="Script" id=3]

[node name="Przelewanie" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 421, 366 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="Node2D"]
margin_left = 268.0
margin_top = 81.0
margin_right = 537.0
margin_bottom = 178.0
text = "Overflow of liquids"

[node name="Slot24" parent="." instance=ExtResource( 2 )]
margin_left = 447.0
margin_top = 187.0
margin_right = 517.0
margin_bottom = 257.0
rect_scale = Vector2( 3, 2 )

[node name="Slot25" parent="." instance=ExtResource( 2 )]
margin_left = 183.0
margin_top = 188.0
margin_right = 253.0
margin_bottom = 258.0
rect_scale = Vector2( 3, 2 )

[node name="Slot1" parent="." instance=ExtResource( 2 )]
margin_left = 576.0
margin_top = 104.0
margin_right = 636.0
margin_bottom = 164.0

[connection signal="pressed" from="Node2D/Button" to="." method="_on_Button_pressed"]
